tests/baselines/reference/infinitelyExpandingTypes1.errors.txt
tests/cases/compiler/infinitelyExpandingTypes1.ts(17,1): error TS2321: Excessive stack depth comparing types 'List<number>' and 'MyList<number>'.
tests/cases/compiler/infinitelyExpandingTypes1.ts(17,1): error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
tests/cases/compiler/infinitelyExpandingTypes1.ts(17,1): error TS2367: This comparison appears to be unintentional because the types 'List<number>' and 'MyList<number>' have no overlap.
tests/cases/compiler/infinitelyExpandingTypes1.ts(21,1): error TS2367: This comparison appears to be unintentional because the types 'List<number>' and 'List<string>' have no overlap.


==== tests/cases/compiler/infinitelyExpandingTypes1.ts (4 errors) ====
    interface List<T> {
        data: T;
        next: List<T>;
        owner: List<List<T>>;
    }
    
    
    interface MyList<T> {
        data: T;
        next: MyList<T>;
        owner: MyList<MyList<T>>;
    }
    
    var l: List<number>;
    var m: MyList<number>;
    
    l == m; // should error
    ~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'List<number>' and 'MyList<number>'.
    ~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
    ~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'List<number>' and 'MyList<number>' have no overlap.
    
    var l2: List<string>;
    
    l == l2; // should error;
    ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'List<number>' and 'List<string>' have no overlap.
    
    l == l; // should not error